--- a/package.json
+++ b/package.json
@@ -22,10 +22,26 @@
     "@vue/cli-plugin-vuex": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
-  }
+  },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KenOfficialWebsite/KenOfficialWebsite.git"
+  },
+  "author": "CasperOng <<>",
+  "license": "MIT",
+  "description": "## Project setup ``` yarn install ```",
+  "bugs": {
+    "url": "https://github.com/KenOfficialWebsite/KenOfficialWebsite/issues"
+  },
+  "homepage": "https://github.com/KenOfficialWebsite/KenOfficialWebsite#readme",
+  "directories": {
+    "doc": "docs"
+  },
+  "keywords": []
 }
